examples/tree/artifacts/tests/initialize_input_checks/result.txt
| Case | ASM (CUs) | Rust (CUs) | Overhead | Overhead % |
|------|-----------|------------|----------|------------|
| User has nonzero data length | 7 | 9 | +2 | +28.6% |
| Tree account is duplicate | 9 | 11 | +2 | +22.2% |
| Tree has nonzero data length | 11 | 13 | +2 | +18.2% |
| System program is duplicate | 13 | 15 | +2 | +15.4% |
| System program wrong data length | 15 | 17 | +2 | +13.3% |
| Rent sysvar is duplicate | 17 | 19 | +2 | +11.8% |
| Rent address mismatch word 0 | 20 | 22 | +2 | +10.0% |
| Rent address mismatch word 1 | 20 | 22 | +2 | +10.0% |
| Rent address mismatch word 2 | 23 | 26 | +3 | +13.0% |
| Rent address mismatch word 3 | 23 | 26 | +3 | +13.0% |
| Rent address mismatch word 4 | 26 | 30 | +4 | +15.4% |
| Rent address mismatch word 5 | 26 | 30 | +4 | +15.4% |
| Rent address mismatch word 6 | 29 | 33 | +4 | +13.8% |
| Rent address mismatch word 7 | 29 | 33 | +4 | +13.8% |
| Non-empty instruction data | 31 | 37 | +6 | +19.4% |
test tests::test_initialize_input_checks ... ok
warning: unused variable: `signers_seeds`
   --> tree/src/program.rs:165:9
    |
165 |     let signers_seeds = SolSignerSeeds {
    |         ^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_signers_seeds`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default
warning: function `check_success` is never used
  --> tree/src/tests.rs:26:4
   |
26 | fn check_success(
   |    ^^^^^^^^^^^^^
   |
   = note: `#[warn(dead_code)]` (part of `#[warn(unused)]`) on by default
warning: `tree` (lib test) generated 2 warnings
[ ... DEBUG ... ] Program DASMAC... invoke [1]
[ ... DEBUG ... ] Program DASMAC... consumed 7 of 1400000 compute units
[ ... DEBUG ... ] Program DASMAC... failed: custom program error: 0x2
[ ... DEBUG ... ] Program DASMAC... invoke [1]
[ ... DEBUG ... ] Program DASMAC... consumed 9 of 1400000 compute units
[ ... DEBUG ... ] Program DASMAC... failed: custom program error: 0x2
[ ... DEBUG ... ] Program DASMAC... invoke [1]
[ ... DEBUG ... ] Program DASMAC... consumed 9 of 1400000 compute units
[ ... DEBUG ... ] Program DASMAC... failed: custom program error: 0x5
[ ... DEBUG ... ] Program DASMAC... invoke [1]
[ ... DEBUG ... ] Program DASMAC... consumed 11 of 1400000 compute units
[ ... DEBUG ... ] Program DASMAC... failed: custom program error: 0x5
[ ... DEBUG ... ] Program DASMAC... invoke [1]
[ ... DEBUG ... ] Program DASMAC... consumed 11 of 1400000 compute units
[ ... DEBUG ... ] Program DASMAC... failed: custom program error: 0x3
[ ... DEBUG ... ] Program DASMAC... invoke [1]
[ ... DEBUG ... ] Program DASMAC... consumed 13 of 1400000 compute units
[ ... DEBUG ... ] Program DASMAC... failed: custom program error: 0x3
[ ... DEBUG ... ] Program DASMAC... invoke [1]
[ ... DEBUG ... ] Program DASMAC... consumed 13 of 1400000 compute units
[ ... DEBUG ... ] Program DASMAC... failed: custom program error: 0x6
[ ... DEBUG ... ] Program DASMAC... invoke [1]
[ ... DEBUG ... ] Program DASMAC... consumed 15 of 1400000 compute units
[ ... DEBUG ... ] Program DASMAC... failed: custom program error: 0x6
[ ... DEBUG ... ] Program DASMAC... invoke [1]
[ ... DEBUG ... ] Program DASMAC... consumed 15 of 1400000 compute units
[ ... DEBUG ... ] Program DASMAC... failed: custom program error: 0x4
[ ... DEBUG ... ] Program DASMAC... invoke [1]
[ ... DEBUG ... ] Program DASMAC... consumed 17 of 1400000 compute units
[ ... DEBUG ... ] Program DASMAC... failed: custom program error: 0x4
[ ... DEBUG ... ] Program DASMAC... invoke [1]
[ ... DEBUG ... ] Program DASMAC... consumed 17 of 1400000 compute units
[ ... DEBUG ... ] Program DASMAC... failed: custom program error: 0x7
[ ... DEBUG ... ] Program DASMAC... invoke [1]
[ ... DEBUG ... ] Program DASMAC... consumed 19 of 1400000 compute units
[ ... DEBUG ... ] Program DASMAC... failed: custom program error: 0x7
[ ... DEBUG ... ] Program DASMAC... invoke [1]
[ ... DEBUG ... ] Program DASMAC... consumed 20 of 1400000 compute units
[ ... DEBUG ... ] Program DASMAC... failed: custom program error: 0x8
[ ... DEBUG ... ] Program DASMAC... invoke [1]
[ ... DEBUG ... ] Program DASMAC... consumed 22 of 1400000 compute units
[ ... DEBUG ... ] Program DASMAC... failed: custom program error: 0x8
[ ... DEBUG ... ] Program DASMAC... invoke [1]
[ ... DEBUG ... ] Program DASMAC... consumed 20 of 1400000 compute units
[ ... DEBUG ... ] Program DASMAC... failed: custom program error: 0x8
[ ... DEBUG ... ] Program DASMAC... invoke [1]
[ ... DEBUG ... ] Program DASMAC... consumed 22 of 1400000 compute units
[ ... DEBUG ... ] Program DASMAC... failed: custom program error: 0x8
[ ... DEBUG ... ] Program DASMAC... invoke [1]
[ ... DEBUG ... ] Program DASMAC... consumed 23 of 1400000 compute units
[ ... DEBUG ... ] Program DASMAC... failed: custom program error: 0x8
[ ... DEBUG ... ] Program DASMAC... invoke [1]
[ ... DEBUG ... ] Program DASMAC... consumed 26 of 1400000 compute units
[ ... DEBUG ... ] Program DASMAC... failed: custom program error: 0x8
[ ... DEBUG ... ] Program DASMAC... invoke [1]
[ ... DEBUG ... ] Program DASMAC... consumed 23 of 1400000 compute units
[ ... DEBUG ... ] Program DASMAC... failed: custom program error: 0x8
[ ... DEBUG ... ] Program DASMAC... invoke [1]
[ ... DEBUG ... ] Program DASMAC... consumed 26 of 1400000 compute units
[ ... DEBUG ... ] Program DASMAC... failed: custom program error: 0x8
[ ... DEBUG ... ] Program DASMAC... invoke [1]
[ ... DEBUG ... ] Program DASMAC... consumed 26 of 1400000 compute units
[ ... DEBUG ... ] Program DASMAC... failed: custom program error: 0x8
[ ... DEBUG ... ] Program DASMAC... invoke [1]
[ ... DEBUG ... ] Program DASMAC... consumed 30 of 1400000 compute units
[ ... DEBUG ... ] Program DASMAC... failed: custom program error: 0x8
[ ... DEBUG ... ] Program DASMAC... invoke [1]
[ ... DEBUG ... ] Program DASMAC... consumed 26 of 1400000 compute units
[ ... DEBUG ... ] Program DASMAC... failed: custom program error: 0x8
[ ... DEBUG ... ] Program DASMAC... invoke [1]
[ ... DEBUG ... ] Program DASMAC... consumed 30 of 1400000 compute units
[ ... DEBUG ... ] Program DASMAC... failed: custom program error: 0x8
[ ... DEBUG ... ] Program DASMAC... invoke [1]
[ ... DEBUG ... ] Program DASMAC... consumed 29 of 1400000 compute units
[ ... DEBUG ... ] Program DASMAC... failed: custom program error: 0x8
[ ... DEBUG ... ] Program DASMAC... invoke [1]
[ ... DEBUG ... ] Program DASMAC... consumed 33 of 1400000 compute units
[ ... DEBUG ... ] Program DASMAC... failed: custom program error: 0x8
[ ... DEBUG ... ] Program DASMAC... invoke [1]
[ ... DEBUG ... ] Program DASMAC... consumed 29 of 1400000 compute units
[ ... DEBUG ... ] Program DASMAC... failed: custom program error: 0x8
[ ... DEBUG ... ] Program DASMAC... invoke [1]
[ ... DEBUG ... ] Program DASMAC... consumed 33 of 1400000 compute units
[ ... DEBUG ... ] Program DASMAC... failed: custom program error: 0x8
[ ... DEBUG ... ] Program DASMAC... invoke [1]
[ ... DEBUG ... ] Program DASMAC... consumed 31 of 1400000 compute units
[ ... DEBUG ... ] Program DASMAC... failed: custom program error: 0x9
[ ... DEBUG ... ] Program DASMAC... invoke [1]
[ ... DEBUG ... ] Program DASMAC... consumed 37 of 1400000 compute units
[ ... DEBUG ... ] Program DASMAC... failed: custom program error: 0x9